fix: added new image to get started templates, fixed sidebar overlapping bug (#4533)
* Fixed flow on top of sidebar

* Fixed get started templates design and bg image

* Fixed build button overflowing

* Changed truncation of list

* Fixed colors on collapse buttons

* Fixed is mobile hook and fixed sidebar not reappearing after hiding it in small screens

* Changed to max char 110

--- a/src/frontend/src/style/applies.css
+++ b/src/frontend/src/style/applies.css
@@ -322,7 +322,7 @@
     @apply flex flex-col justify-center bg-background transition-all;
   }
   .generic-node-div-title {
-    @apply flex w-full items-center gap-2;
+    @apply flex flex-1 items-center gap-2 overflow-hidden;
   }
   .generic-node-title-arrangement {
     @apply flex-max-width items-center truncate;
